force-app/main/default/objects/Lease_Assignment__c/Lease_Assignment__c.object-meta.xml
<CustomObject>
    <description>Used to track lease assignment process</description>
    <label>Lease Assignment</label>
    <nameField>
        <label>Lease Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>