force-app/main/default/objects/Lease_Assignment__c/fields/Assignment_Assumption_Vendor_PO__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Assumption_Vendor_PO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Assignment &amp; Assumption Vendor PO #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>