force-app/main/default/objects/Lease_Assignment__c/fields/Assignment_Assumption_Vendor_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Assumption_Vendor_PO_Date__c</fullName>
    <label>Assignment &amp; Assumption Vendor PO Date</label>
    <type>Date</type>
</CustomField>