force-app/main/default/objects/Lease_Assignment__c/fields/Assignment_AssumptionAgreement_Drafted__c.field-meta.xml
<CustomField>
    <fullName>Assignment_AssumptionAgreement_Drafted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment &amp; AssumptionAgreement Drafted</label>
    <type>Checkbox</type>
</CustomField>