force-app/main/default/objects/Lease_Assignment__c/fields/Assignment_Consent_Fee__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Consent_Fee__c</fullName>
    <inlineHelpText>Fee agreed upon with Dish</inlineHelpText>
    <label>Assignment Consent Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>