force-app/main/default/objects/Lease_Assignment__c/fields/Assignment_Consent_Routed_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Consent_Routed_for_Approval__c</fullName>
    <inlineHelpText>Date consent record routed for internal review and approval</inlineHelpText>
    <label>Assignment Consent Routed for Approval</label>
    <type>Date</type>
</CustomField>