force-app/main/default/objects/Lease_Assignment__c/fields/Assignment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Stage__c</fullName>
    <defaultValue>&apos;1. Select Lease&apos;</defaultValue>
    <label>Assignment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Select Lease</fullName>
                <default>true</default>
                <label>1. Select Lease</label>
            </value>
            <value>
                <fullName>2. Send Consent Request</fullName>
            </value>
            <value>
                <fullName>3. Waiting on LL Consent</fullName>
            </value>
            <value>
                <fullName>4. Dish Discussion - Fees</fullName>
            </value>
            <value>
                <fullName>5. Finalize LL Consent</fullName>
            </value>
            <value>
                <fullName>6. Discussion with DISH</fullName>
            </value>
            <value>
                <fullName>7. Lease Termination</fullName>
            </value>
            <value>
                <fullName>8. Compile Closing</fullName>
            </value>
            <value>
                <fullName>9. Deal Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>