force-app/main/default/objects/Lease_Assignment__c/fields/Bill_of_Sale_Expense_Sheet_Drafted__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Sale_Expense_Sheet_Drafted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if Bill of Sale Draft is complete</inlineHelpText>
    <label>Bill of Sale &amp; Expense Sheet Drafted</label>
    <type>Checkbox</type>
</CustomField>