force-app/main/default/objects/Lease_Assignment__c/fields/Consent_to_Assign_Vendor_PO__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Assign_Vendor_PO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consent to Assign Vendor PO #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>