force-app/main/default/objects/Lease_Assignment__c/fields/Consent_to_Assign_Vendor_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Assign_Vendor_PO_Date__c</fullName>
    <label>Consent to Assign Vendor PO Date</label>
    <type>Date</type>
</CustomField>