force-app/main/default/objects/Lease_Assignment__c/fields/Date_Consent_Request_POD_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Consent_Request_POD_uploaded__c</fullName>
    <label>Date Consent Request &amp; POD uploaded</label>
    <type>Date</type>
</CustomField>