force-app/main/default/objects/Lease_Assignment__c/fields/Date_Consent_Request_sent_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>Date_Consent_Request_sent_to_Dish__c</fullName>
    <label>Date Consent Request sent to Dish?</label>
    <type>Date</type>
</CustomField>