force-app/main/default/objects/Lease_Assignment__c/fields/Date_Deal_Closes__c.field-meta.xml
<CustomField>
    <fullName>Date_Deal_Closes__c</fullName>
    <label>Date Deal Closes</label>
    <type>Date</type>
</CustomField>