force-app/main/default/objects/Lease_Assignment__c/fields/Date_Dish_notified_LL_silent__c.field-meta.xml
<CustomField>
    <fullName>Date_Dish_notified_LL_silent__c</fullName>
    <label>Date Dish notified LL silent</label>
    <type>Date</type>
</CustomField>