force-app/main/default/objects/Lease_Assignment__c/fields/Date_Dish_Notified_of_LL_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Date_Dish_Notified_of_LL_Rejection__c</fullName>
    <inlineHelpText>Date Dish Notified of LL Rejection of Consent Request
PM to update upon notifying Dish of LL’s decision to not provide consent.</inlineHelpText>
    <label>Date Dish Notified of LL Rejection?</label>
    <type>Date</type>
</CustomField>