force-app/main/default/objects/Lease_Assignment__c/fields/Date_FE_LL_Consent_uploaded_to_Sfdc__c.field-meta.xml
<CustomField>
    <fullName>Date_FE_LL_Consent_uploaded_to_Sfdc__c</fullName>
    <label>Date FE LL Consent uploaded to Sfdc</label>
    <type>Date</type>
</CustomField>