force-app/main/default/objects/Lease_Assignment__c/fields/Date_LL_Consent_Fully_Executed__c.field-meta.xml
<CustomField>
    <fullName>Date_LL_Consent_Fully_Executed__c</fullName>
    <label>Date LL Consent Fully Executed?</label>
    <type>Date</type>
</CustomField>