force-app/main/default/objects/Lease_Assignment__c/fields/Date_Notice_Consent_Request_Sent_to_LL__c.field-meta.xml
<CustomField>
    <fullName>Date_Notice_Consent_Request_Sent_to_LL__c</fullName>
    <label>Date Notice Consent Request Sent to LL</label>
    <type>Date</type>
</CustomField>