force-app/main/default/objects/Lease_Assignment__c/fields/Date_payment_of_fees_issued_to_LL__c.field-meta.xml
<CustomField>
    <fullName>Date_payment_of_fees_issued_to_LL__c</fullName>
    <label>Date payment of fees issued to LL?</label>
    <type>Date</type>
</CustomField>