force-app/main/default/objects/Lease_Assignment__c/fields/Did_Dish_Accept_Site__c.field-meta.xml
<CustomField>
    <fullName>Did_Dish_Accept_Site__c</fullName>
    <formula>TEXT(Dish_Option__r.Did_Dish_Accept_Site__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Did Dish Accept Site?</label>
    <type>Text</type>
</CustomField>