force-app/main/default/objects/Lease_Assignment__c/fields/Did_Dish_TMO_Close_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Did_Dish_TMO_Close_on_Site__c</fullName>
    <label>Did Dish/TMO Close on Site?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>