force-app/main/default/objects/Lease_Assignment__c/fields/Did_LL_consent__c.field-meta.xml
<CustomField>
    <fullName>Did_LL_consent__c</fullName>
    <label>Did LL consent ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>