force-app/main/default/objects/Lease_Assignment__c/fields/Dish_Approves_Assignment_Docs__c.field-meta.xml
<CustomField>
    <fullName>Dish_Approves_Assignment_Docs__c</fullName>
    <label>Dish Approves Assignment Docs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>