force-app/main/default/objects/Lease_Assignment__c/fields/DISH_intends_for_the_aforementioned_exer__c.field-meta.xml
<CustomField>
    <fullName>DISH_intends_for_the_aforementioned_exer__c</fullName>
    <formula>TEXT(Dish_Option__r.DISH_intends_for_the_aforementioned_exer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DISH intends for the aforementioned exer</label>
    <type>Text</type>
</CustomField>