force-app/main/default/objects/Lease_Assignment__c/fields/Dish_Notified_30D_into_Transfer_Period__c.field-meta.xml
<CustomField>
    <fullName>Dish_Notified_30D_into_Transfer_Period__c</fullName>
    <inlineHelpText>Date Dish notified LL unresponsive 30 days after Option</inlineHelpText>
    <label>Dish Notified 30D into Transfer Period</label>
    <type>Date</type>
</CustomField>