force-app/main/default/objects/Lease_Assignment__c/fields/Dish_notified_of_Letter_received_from_LL__c.field-meta.xml
<CustomField>
    <fullName>Dish_notified_of_Letter_received_from_LL__c</fullName>
    <label>Date Dish Notified of Consent Received</label>
    <type>Date</type>
</CustomField>