force-app/main/default/objects/Lease_Assignment__c/fields/Dish_Option__c.field-meta.xml
<CustomField>
    <fullName>Dish_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dish Option</label>
    <referenceTo>Dish_Option__c</referenceTo>
    <relationshipLabel>Lease Assignments</relationshipLabel>
    <relationshipName>Lease_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>