force-app/main/default/objects/Lease_Assignment__c/fields/Dish_Option_s_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Dish_Option_s_Acceptance_Date__c</fullName>
    <formula>Dish_Option__r.Dish_Acceptance_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dish Option&apos;s Acceptance Date</label>
    <type>Date</type>
</CustomField>