force-app/main/default/objects/Lease_Assignment__c/fields/Dish_proceeding_with_their_own_lease__c.field-meta.xml
<CustomField>
    <fullName>Dish_proceeding_with_their_own_lease__c</fullName>
    <label>Dish proceeding with their own lease?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>