force-app/main/default/objects/Lease_Assignment__c/fields/Does_Dish_Accept_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Does_Dish_Accept_Terms_and_Conditions__c</fullName>
    <label>Does Dish Accept Terms and Conditions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>