force-app/main/default/objects/Lease_Assignment__c/fields/Does_Dish_Agree_to_Pay_Fees__c.field-meta.xml
<CustomField>
    <fullName>Does_Dish_Agree_to_Pay_Fees__c</fullName>
    <inlineHelpText>For a Lease that is not Freely Transferable</inlineHelpText>
    <label>Does Dish Agree to Pay Fees?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>