force-app/main/default/objects/Lease_Assignment__c/fields/Does_Dish_still_want_to_option_lease__c.field-meta.xml
<CustomField>
    <fullName>Does_Dish_still_want_to_option_lease__c</fullName>
    <inlineHelpText>Does Dish still want to option the lease at this site?</inlineHelpText>
    <label>Does Dish still want to option lease?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>