force-app/main/default/objects/Lease_Assignment__c/fields/Does_T_Mobile_have_the_Right_to_assign__c.field-meta.xml
<CustomField>
    <fullName>Does_T_Mobile_have_the_Right_to_assign__c</fullName>
    <inlineHelpText>Does T-Mobile have right to assign the lease to a 3rd party without consent?</inlineHelpText>
    <label>Does T-Mobile have the Right to assign?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>