force-app/main/default/objects/Lease_Assignment__c/fields/Does_the_Lease_need_to_be_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Lease_need_to_be_Terminated__c</fullName>
    <description>Created a field for Trigger to get the value from Lease Negotiation.</description>
    <inlineHelpText>Please do not change the value in this field.
The value in the field is populated from the associated Lease Negotiation record.</inlineHelpText>
    <label>Does the Lease need to be Terminated?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>