force-app/main/default/objects/Lease_Assignment__c/fields/Early_Termination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Fee__c</fullName>
    <formula>Lease_Abstract_1__r.Early_Termination_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Termination Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>