force-app/main/default/objects/Lease_Assignment__c/fields/Enter_Team_Comments_Max_240__c.field-meta.xml
<CustomField>
    <fullName>Enter_Team_Comments_Max_240__c</fullName>
    <label>Enter Team Comments (Max 240)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>