force-app/main/default/objects/Lease_Assignment__c/fields/Equipment_Decommission_Complete__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Decommission_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Applicable</inlineHelpText>
    <label>Equipment Decommission Complete</label>
    <type>Checkbox</type>
</CustomField>