force-app/main/default/objects/Lease_Assignment__c/fields/Equipment_Pricing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Pricing_Fee__c</fullName>
    <label>Equipment Pricing Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>