force-app/main/default/objects/Lease_Assignment__c/fields/Fee_paid_by_T_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Fee_paid_by_T_Mobile__c</fullName>
    <label>Fee paid by T-Mobile</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>