force-app/main/default/objects/Lease_Assignment__c/fields/Fees_shared_with_Dish__c.field-meta.xml
<CustomField>
    <fullName>Fees_shared_with_Dish__c</fullName>
    <label>Fees shared with Dish</label>
    <type>Date</type>
</CustomField>