force-app/main/default/objects/Lease_Assignment__c/fields/Is_lease_in_holdover_term_exp_status__c.field-meta.xml
<CustomField>
    <fullName>Is_lease_in_holdover_term_exp_status__c</fullName>
    <description>Created a field for Trigger to get the value from Lease Negotiation.</description>
    <inlineHelpText>Please do not change the value in this field.
The value in the field is populated from the associated Lease Negotiation record.</inlineHelpText>
    <label>Is lease in holdover,term/exp status?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>