force-app/main/default/objects/Lease_Assignment__c/fields/Is_there_an_agreement_to_pay_fees__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_agreement_to_pay_fees__c</fullName>
    <label>Is there an agreement to pay fees?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>