force-app/main/default/objects/Lease_Assignment__c/fields/Lease_Abstract_s_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_Abstract_s_ID__c</fullName>
    <formula>Lease_Abstract_1__r.Lease_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Abstract&apos;s ID</label>
    <type>Text</type>
</CustomField>