force-app/main/default/objects/Lease_Assignment__c/fields/Lease_Abstract_s_LandLord__c.field-meta.xml
<CustomField>
    <fullName>Lease_Abstract_s_LandLord__c</fullName>
    <formula>Lease_Abstract_1__r.Lease_Landlord__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Abstract&apos;s LandLord</label>
    <type>Text</type>
</CustomField>