force-app/main/default/objects/Lease_Assignment__c/fields/Lease_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Negotiation</label>
    <referenceTo>Lease_Negotiation__c</referenceTo>
    <relationshipLabel>Lease Assignments</relationshipLabel>
    <relationshipName>Lease_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>