force-app/main/default/objects/Lease_Assignment__c/fields/Leasing_Decom_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Decom_Team_Comments__c</fullName>
    <inlineHelpText>Cannot be edited;
Please enter comments in the field above.</inlineHelpText>
    <label>Leasing/Decom Team Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>