force-app/main/default/objects/Lease_Assignment__c/fields/Legal_Fees__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fees__c</fullName>
    <label>Legal Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>