force-app/main/default/objects/Lease_Assignment__c/fields/LL_Consent_Delivery_Confirmation_sent__c.field-meta.xml
<CustomField>
    <fullName>LL_Consent_Delivery_Confirmation_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LL Consent &amp; Delivery Confirmation sent</label>
    <type>Checkbox</type>
</CustomField>