force-app/main/default/objects/Lease_Assignment__c/fields/LL_Consent_Received_for_Assignment__c.field-meta.xml
<CustomField>
    <fullName>LL_Consent_Received_for_Assignment__c</fullName>
    <inlineHelpText>Only select NO if it is an outright rejection</inlineHelpText>
    <label>LL Consent Received for Assignment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>