force-app/main/default/objects/Lease_Assignment__c/fields/LL_Consent_Type_Required__c.field-meta.xml
<CustomField>
    <fullName>LL_Consent_Type_Required__c</fullName>
    <label>LL Consent Type Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent to Assign to 3rd Party</fullName>
            </value>
            <value>
                <fullName>Consent for Release of Liability upon Assignment</fullName>
            </value>
            <value>
                <fullName>Consent and Release (both)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>