force-app/main/default/objects/Lease_Assignment__c/fields/LL_Demands_Additional_Compensation__c.field-meta.xml
<CustomField>
    <fullName>LL_Demands_Additional_Compensation__c</fullName>
    <label>LL Demands Additional Compensation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Fees</fullName>
            </value>
            <value>
                <fullName>Regulatory Fees</fullName>
            </value>
            <value>
                <fullName>Other Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>