force-app/main/default/objects/Lease_Assignment__c/fields/LL_Notified_of_Assignment__c.field-meta.xml
<CustomField>
    <fullName>LL_Notified_of_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LL Notified of Assignment</label>
    <type>Checkbox</type>
</CustomField>