force-app/main/default/objects/Lease_Assignment__c/fields/LLConsentDeliveryConfirmationsenttoDish__c.field-meta.xml
<CustomField>
    <fullName>LLConsentDeliveryConfirmationsenttoDish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LLConsent&amp;DeliveryConfirmationsenttoDish</label>
    <type>Checkbox</type>
</CustomField>