force-app/main/default/objects/Lease_Assignment__c/fields/LLnotified_of_proceeding_with_assignment__c.field-meta.xml
<CustomField>
    <fullName>LLnotified_of_proceeding_with_assignment__c</fullName>
    <inlineHelpText>Please enter the Date LandLord notified we can proceed with assignment?</inlineHelpText>
    <label>LLnotified of proceeding with assignment</label>
    <type>Date</type>
</CustomField>