force-app/main/default/objects/Lease_Assignment__c/fields/NOT_NNR_Sent_to_Landlord__c.field-meta.xml
<CustomField>
    <fullName>NOT_NNR_Sent_to_Landlord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created a field for Trigger to get the value from Lease Negotiation.</description>
    <inlineHelpText>Please do not change the value in this field.
The value in the field is populated from the associated Lease Negotiation record.</inlineHelpText>
    <label>NOT/NNR Sent to Landlord</label>
    <type>Checkbox</type>
</CustomField>