force-app/main/default/objects/Lease_Assignment__c/fields/Notification_of_fees_sent_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>Notification_of_fees_sent_to_Dish__c</fullName>
    <label>Notification of fees sent to Dish</label>
    <type>Date</type>
</CustomField>