force-app/main/default/objects/Lease_Assignment__c/fields/NSC_Vendor__c.field-meta.xml
<CustomField>
    <fullName>NSC_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSC Vendor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lease_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>