force-app/main/default/objects/Lease_Assignment__c/fields/Other_Fees__c.field-meta.xml
<CustomField>
    <fullName>Other_Fees__c</fullName>
    <label>Other Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>