force-app/main/default/objects/Lease_Assignment__c/fields/Other_Fees_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Fees_Description__c</fullName>
    <label>Other Fees Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>