force-app/main/default/objects/Lease_Assignment__c/fields/Other_LL_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Other_LL_Response_Received__c</fullName>
    <label>Other LL Response Received?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outright rejected consent</fullName>
            </value>
            <value>
                <fullName>Outright rejected release</fullName>
            </value>
            <value>
                <fullName>Demanding additional compensation (legal fees, etc.)</fullName>
            </value>
            <value>
                <fullName>VB Sold Site</fullName>
            </value>
            <value>
                <fullName>LL Requesting Additional Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>