force-app/main/default/objects/Lease_Assignment__c/fields/Planned_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Closing_Date__c</fullName>
    <label>Planned Closing Date</label>
    <type>Date</type>
</CustomField>