force-app/main/default/objects/Lease_Assignment__c/fields/Pre_Paid_Rent_Owed_to_T_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Pre_Paid_Rent_Owed_to_T_Mobile__c</fullName>
    <label>Pre-Paid Rent Owed to T-Mobile</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>