force-app/main/default/objects/Lease_Assignment__c/fields/Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=JPGZ&amp;versionId=068f400000KCeHe&amp;operationContext=CHATTER&amp;contentId=05Tf400001OppfB&amp;page=0&quot;, &quot;Sorry not available at this time&quot;, 1200, 2100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Flow</label>
    <type>Text</type>
</CustomField>