force-app/main/default/objects/Lease_Assignment__c/fields/Prorated_Rent__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Rent__c</fullName>
    <description>This field is used to Capture the Prorated rent in the Compile Close stage of Lease Assignment</description>
    <label>Prorated Rent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>