force-app/main/default/objects/Lease_Assignment__c/fields/Regulatory_Fees__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Fees__c</fullName>
    <label>Regulatory Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>