force-app/main/default/objects/Lease_Assignment__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lease Assignments</relationshipLabel>
    <relationshipName>Lease_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>