force-app/main/default/objects/Lease_Assignment__c/fields/T_Mo_Unfet_Termination_Rights__c.field-meta.xml
<CustomField>
    <fullName>T_Mo_Unfet_Termination_Rights__c</fullName>
    <formula>Lease_Abstract_1__r.T_Mo_Unfet_Termination_Rights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T-Mo Unfet Termination Rights</label>
    <type>Text</type>
</CustomField>