force-app/main/default/objects/Lease_Assignment__c/fields/T_Mobile_fully_released_of_all_liability__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_fully_released_of_all_liability__c</fullName>
    <inlineHelpText>Upon assignment, Is T-Mobile fully released of all liability?</inlineHelpText>
    <label>T-Mobile fullyreleased of all liability?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>