force-app/main/default/objects/Lease_Assignment__c/fields/Termination_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Termination_Type_1__c</fullName>
    <formula>TEXT(Lease_Abstract_1__r.Termination_Type_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Type 1</label>
    <type>Text</type>
</CustomField>