force-app/main/default/objects/Lease_Assignment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Assignments (Vendor)</relationshipLabel>
    <relationshipName>Lease_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>