force-app/main/default/objects/Lease_Assignment__c/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the Contact associated to Vendor</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Vendor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lease Assignments (Vendor Contact)</relationshipLabel>
    <relationshipName>Lease_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>