force-app/main/default/objects/Lease_Assignment__c/fields/Vendor_ID_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID_Hidden__c</fullName>
    <label>Vendor ID(Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>