force-app/main/default/objects/Lease_Assignment__c/fields/Which_fees_has_TMO_agreed_to_pay__c.field-meta.xml
<CustomField>
    <fullName>Which_fees_has_TMO_agreed_to_pay__c</fullName>
    <label>Which fees has TMO agreed to pay?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>